[package]
name = "chromoe-db"
description = "An open-source, flexible, and scalable ecosystem designed for Rust-compatible database drivers."
version = "0.0.1-alpha"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
